--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="https://github.com/NaufalXDs/NaufalXDs/blob/main/Naufal.png?raw=true" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="dist/output.css" rel="stylesheet" />
-    <script src="src/theme.js"></script>
+    <link href="build.css" rel="stylesheet" />
+    <script src="public/src/theme.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script> -->
     <script src="https://kit.fontawesome.com/7702a3a340.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
