--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- <meta name="viewport" content="width=, initial-scale=1.0" /> -->
     <title>Landing Page</title>
-    <link rel="icon" href="https://github.com/NaufalXDs/NaufalXDs/blob/main/Naufal.png?raw=true" />
+    <link rel="icon" href="Naufal.png" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
     <link href="build.css" rel="stylesheet" />
+    <link href="animate.min.css" rel="stylesheet" />
     <script src="public/src/theme.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script> -->
-    <script src="https://kit.fontawesome.com/7702a3a340.js" crossorigin="anonymous"></script>
+    <script src="public/fontawesome.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/7702a3a340.js" crossorigin="anonymous"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,100;1,900&display=swap" rel="stylesheet" />
-    <!-- <script defer src="./app.js" type="module"></script> -->
   </head>
   <body class="bg-base-100 font-Poppins">
     <!-- Navbar -->
