--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
     <link href="build.css" rel="stylesheet" />
     <link href="animate.min.css" rel="stylesheet" />
-    <script src="public/src/theme.js"></script>
+    <script src="src/theme.js"></script>
     <script src="public/fontawesome.js" crossorigin="anonymous"></script>
     <!-- <script src="https://kit.fontawesome.com/7702a3a340.js" crossorigin="anonymous"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
