--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
               <img src="" alt="" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Tips Belajar Programming</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary text-gray-400">Tips Belajar Programming</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat officia beatae quisquam?</p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
