--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
             <li><a href="#Project">Project</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost normal-case text-xl">Naufal7</a>
+        <a class="btn btn-ghost normal-case text-xl" href="index.html">Naufal7</a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal p-0 bg-">
@@ -195,7 +195,7 @@
               <img src="" alt="" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary text-gray-400">Tips Belajar Programming</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Tips Belajar Programming</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat officia beatae quisquam?</p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
@@ -207,7 +207,7 @@
               <img src="" alt="" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Review Keyboard GMMK Pro</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Review Keyboard GMMK Pro</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi facilis illum in.</p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
@@ -219,7 +219,7 @@
               <img src="" alt="" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Menikmati Secangkir Kopi</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Menikmati Secangkir Kopi</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, totam ipsum ea quam sequi velit sunt.</p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
