--- a/public/index.html
+++ b/public/index.html
@@ -74,12 +74,16 @@
       <div class="hero-content flex-col lg:flex-row">
         <img src="https://github.com/NaufalXDs/NaufalXDs/blob/main/Naufal.png?raw=true" width="260" height="400" alt="Naufal From Github" class="max-w-sm rounded-lg shadow-2xl animate__animated animate__fadeInLeft" />
         <div>
-          <h1 class="text-5xl font-semibold shadow-md animate__animated animate__fadeInUp text-center">Hallo saya <span class="text-blue-600 font-bold">Naufal</span></h1>
-          <p class="py-6">saya adalah <span class="text-slate-500 text-center">junior web developer</span></p>
+          <!-- <h2 class="text-3xl font-semibold shadow-md animate__animated animate__fadeInUp text-center">Im <span class="text-blue-600 font-bold">Naufal</span></h2> -->
+          <h2 class="text-base font-semibold text-blue-500 md:text-xl">hello everyone 👋, this is <span class="mt-1 block text-4xl font-bold text-dark lg:text-3xl lg:text-start text-center">Naufal</span>
+          </h2>
+          <p class="py-4 text-center lg:text-start">I am <span class="text-red-500">
+            junior web developer
+          </span></p>
           <!-- <div class="tooltip md:content-center" data-tip="Ngajak Mabar Valo">
             <button class="btn btn-primary content-center">Contact</button>
           </div> -->
-          <p class="flex gap-1 text-slate-700">
+          <p class="flex gap-1 text-slate-700 text-center md:text-start">
             <span>Study Deep: </span>
             <!-- Html -->
             <a href="https://en.wikipedia.org/wiki/HTML">
@@ -168,10 +172,10 @@
       <div class="container">
         <div class="card lg:card-side bg-base-100 shadow-xl text-center">
           <div class="card-body">
-            <h2 class="font-bold text-3xl">Tentang Saya</h2>
+            <h2 class="font-bold text-3xl">About</h2>
             <p class="font-semibold text-gray-400">
-              Hallo nama saya <span class="text-blue-500 font-semibold">Naufal</span> saya adalah seorang <span class="text-slate-500 text-center">junior web developer</span> saya lahir di tahun 2007,saya mulai belajar tentang programer di
-              tahun 2019
+              Hello my name is <span class="text-blue-500 font-semibold">Naufal</span> I am a <span class="text-slate-500 text-center">junior web developer</span> I was born In 2007, I started learning about programmers at
+              year 2019
             </p>
           </div>
         </div>
@@ -185,7 +189,8 @@
         <div class="w-full px-4">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h2 class="mb-4 text-3xl font-bold sm:text-4xl lg:text-5xl">Blog</h2>
-            <p class="text-md font-medium text-gray-400 md:text-lg">Ini adalah Blog isi nya project terbaru atau barang yg bagus</p>
+            <p class="text-md font-medium text-gray-400 md:text-lg">
+              Activity Information</p>
           </div>
         </div>
 
@@ -195,10 +200,10 @@
               <img src="" alt="" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Tips Belajar Programming</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Lorem, ipsum dolor.</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat officia beatae quisquam?</p>
-                <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <a href="naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -207,10 +212,10 @@
               <img src="" alt="" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Review Keyboard GMMK Pro</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Lorem, ipsum dolor.</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi facilis illum in.</p>
-                <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <a href="naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -219,10 +224,10 @@
               <img src="" alt="" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Menikmati Secangkir Kopi</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Lorem, ipsum dolor.</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, totam ipsum ea quam sequi velit sunt.</p>
-                <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <a href="naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
