theme change bro

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
               ></path>
             </svg>
           </span>
-          <span data-toggle-theme="bumblebee,halloween" data-act-class="pl-4" class="border rounded-full border-accent flex items-center cursor-pointer w-10 bg-green transition-all duration-300 ease-in-out">
+          <span data-toggle-theme="bumblebee,night" data-act-class="pl-4" class="border rounded-full border-accent flex items-center cursor-pointer w-10 bg-green transition-all duration-300 ease-in-out">
             <span class="rounded-full w-3 h-3 m-1 bg-accent"> </span>
           </span>
           <span>
