hyper link change

--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
                   <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Lorem, ipsum dolor.</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat officia beatae quisquam?</p>
-                <a href="naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <a href="https://naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -215,7 +215,7 @@
                   <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Lorem, ipsum dolor.</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi facilis illum in.</p>
-                <a href="naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <a href="https://naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -227,7 +227,7 @@
                   <a href="#" class="mb-3 block truncate text-xl font-semibold hover:text-blue-400 text-gray-400">Lorem, ipsum dolor.</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, totam ipsum ea quam sequi velit sunt.</p>
-                <a href="naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <a href="https://naufalxd.xyz" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -254,7 +254,7 @@
             ></path>
           </svg>
         </a>
-        <a href="youtube.com"
+        <a href="https://https://youtube.com"
           ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
             <path
               d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
