--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
           <div class="card-body">
             <h2 class="font-bold text-3xl">About</span></h2>
             <p class="font-semibold text-gray-400">
-              Hello my name is <span class="text-blue-500 font-semibold">Naufal</span> I am a <span class="text-slate-500 text-center">junior web developer</span> I was born In 2007, I started learning about programmers at year 2019
+              Hello my name is <span class="text-blue-500 font-semibold">Naufal</span> I am a <span class="text-slate-500 text-center">web developer</span> I was born In 2007, I started learning about programmers at year 2019
             </p>
           </div>
         </div>
