--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
         <div>
           <!-- <h2 class="text-3xl font-semibold shadow-md animate__animated animate__fadeInUp text-center">Im <span class="text-blue-600 font-bold">Naufal</span></h2> -->
           <h2 class="text-base font-semibold text-blue-500 md:text-xl">hello everyone 👋, this is <span class="mt-1 block text-4xl font-bold text-dark lg:text-3xl lg:text-start text-center">Naufal</span></h2>
-          <p class="py-4 text-center lg:text-start">I am <span class="text-red-500"> junior web developer </span></p>
+          <p class="py-4 text-center lg:text-start">I am <span class="text-red-500">web developer </span></p>
           <!-- <div class="tooltip md:content-center" data-tip="Ngajak Mabar Valo">
             <button class="btn btn-primary content-center">Contact</button>
           </div> -->
